--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <h1>Signup</h1>
-        <form action="/welcome" method="post">
+        <form action="/", "/welcome" method="post">
             <table>
                 <tr>
                     <td><label for="username">Username</label></td>
@@ -24,14 +24,14 @@
                     <td><label for="password">Password</label></td>
                     <td>
                         <input name="password" type="password">
-                        <span class="error"></span>
+                        <span class="error">{{password_error}}</span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="verify">Verify Password</label></td>
                     <td>
                         <input name="verify" type="password">
-                        <span class="error"></span>
+                        <span class="error">{{verify_error}}</span>
                     </td>
                 </tr>
                 <tr>
