more validations -not quite working yet

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
                     <td>
                         <input name="password" type="password">
                         <span class="error">{{password_error}}</span>
+                        <span class="error">{{password_length}}</span>
                     </td>
                 </tr>
                 <tr>
