--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,6 @@
                     <td>
                         <input name="password" type="password">
                         <span class="error">{{password_error}}</span>
-                        <span class="error">{{password_length}}</span>
                     </td>
                 </tr>
                 <tr>
@@ -39,7 +38,7 @@
                     <td><label for="email">Email (optional)</label></td>
                     <td>
                         <input name="email" value="{{email}}">
-                        <span class="error"></span>
+                        <span class="error">{{email_error}}</span>
                     </td>
                 </tr>
             </table>
